[package]
name = "elm-rust-binding"
version = "0.1.0"
edition = "2021"
description = "Call Elm functions from Rust in an ergonomic way"
license = "BSD-3-Clause"
homepage = "https://github.com/anmolitor/elm-rust-binding"
repository = "https://github.com/anmolitor/elm-rust-binding"
readme = "README.md"
keywords = ["elm", "binding"]
categories = ["External FFI bindings", "Web programming", "Development tools"]

[dependencies]
rustyscript = { version = "0.9.0", features = ["console"] }
serde = { version = "1.0.215", features = ["derive"] }
serde-reflection = "0.4.0"
uuid = { version = "1.11.0", features = ["v7"] }
