[package]
name = "elm-rust-binding"
version = "0.3.0"
edition = "2021"
description = "Call Elm functions from Rust in an ergonomic way"
license = "BSD-3-Clause"
homepage = "https://github.com/anmolitor/elm-rust-binding"
repository = "https://github.com/anmolitor/elm-rust-binding"
readme = "README.md"
keywords = ["elm", "binding"]
categories = ["external-ffi-bindings", "web-programming", "development-tools"]

[dependencies]
rustyscript = { version = "^0.11.0", features = ["console"] }
serde = { version = "^1.0.218", features = ["derive"] }
serde-reflection = "^0.5.0"
uuid = { version = "^1.15.0", features = ["v7"] }
